stays an object while Psh::Joblist was converted to a procedural interface
as there was no need for OO here.

=item *

The package Psh::Locale::Base was renamed to Psh::Locale, so the Psh::Locale::
tree now only contains valid locales.

=item *

The C<@Psh::mon> and C<@Psh::wday> variables were removed. Please see the
perldoc for Psh::Locale

=back

=cut

###############################################################################
###############################################################################
##
## 0.009
##
###############################################################################
###############################################################################

=head1 0.009 [2001-01-05]

=head2 New Features

=over 4

=item *

New builtin B<rename> - this does the same as Larry Wall's PPT program
but profits from being integrated into B<psh> (it can use B<psh> subs
and variables for the modification).
- warp [2000-05-01]

=item *

C<Psh::OS::backtick()> now can call and capture the output of
B<psh> builtins on Unix.
- warp [2000-05-01]

=item *

Added new builtin B<fc> which is similar to the command of the same
name from B<bash> - inspired by a comment on the SourceForge
message board (and I finally start to like this command ;-).
- warp [2000-05-03]

=item *

The builtin B<history> now also accepts a text as argument. In that
case it will only print commands containing that text.
- warp [2000-07-08]

=item *

The builtin B<fc> now understands the switch C<-p>. Also it's more
behaviour compatible with B<bash>'s B<fc>.

=item *

New builtin B<bind> which does keybindings (similar to B<bash>).
- Andrew Turner [2000-08-11]

=item *

New builtin B<drives> which shows the available drives on Windows.
- warp [2000-08-26]

=back


=head2 Internals

=over 4

=item *

New sub C<Psh::Util::prompt()> for interactive prompting.
- warp [2000-05-01]

=item *

Cleanups in C<Psh::OS::Unix::_setup_redirects> and
C<...::_remove_redirects>.
- warp [2000-05-01]